--- a/src/shinyDashboardBI/www/themes.css
+++ b/src/shinyDashboardBI/www/themes.css
@@ -7,8 +7,8 @@ h2 {
 }
 
 h1 {
-  color: #F17E1D;
-    font-family: franklin-gothic-urw, sans-serif;
+  color: #1B3766;
+  font-family: franklin-gothic-urw, sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 48px;
@@ -31,4 +31,19 @@ h4 {
   font-size: 24px;
   color: #F17E1D;
   margin-top:30px;
+}
+
+h5 {
+  display:inline-block;
+  box-shadow: inset 0 -0.4em 0 0 #ffdfbf ;
+  font-family: franklin-gothic-urw-comp, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  text-transform: uppercase;
+  color: #1B3766;
+}
+
+p {
+  font-size: 20px;
 }
