--- a/src/shinyDashboardBI/www/themes.css
+++ b/src/shinyDashboardBI/www/themes.css
@@ -45,6 +45,16 @@ h5 {
 }
 
 p {
-  font-size: 20px;
+  font-size: 15px;
 }
+
+.navbar-default {
+    background-color: white;
+}
+                          .navbar-default .navbar-nav > .active > a,
+                           .navbar-default .navbar-nav > .active > a:focus,
+                           .navbar-default .navbar-nav > .active > a:hover {
+                                color: white;
+                                background-color: #E57200;
+                            }
 
